--- a/style/master.css
+++ b/style/master.css
@@ -10,6 +10,7 @@ h1 {
 
 #projectSelect {
     min-width: 35%;
+    margin-top: 20px;
 }
 
 #milestonesContainer {
@@ -18,7 +19,7 @@ h1 {
 }
 
 #milestoneSelect {
-    height: 60px;
+    height: 90px;
     min-width: 35%;
 }
 
@@ -37,4 +38,11 @@ h1 {
 #avcoLogo {
     max-width: 200px;
     margin-left: 20px;
+}
+
+#spinner {
+    max-width: 40px;
+    margin-left: 10px;
+    vertical-align: bottom;
+    display: none;
 }
