--- a/style/master.css
+++ b/style/master.css
@@ -6,6 +6,7 @@ h1 {
     text-align: center;
     font-size: 28px;
     font-weight: bold;
+    width: 100%;
 }
 
 #projectSelect {
@@ -45,4 +46,14 @@ h1 {
     margin-left: 10px;
     vertical-align: bottom;
     display: none;
+}
+
+@media print { 
+    #projectContainer {
+        display: none !important; 
+    } 
+    
+    #milestonesContainer {
+        display: none !important; 
+    }
 }
